Thu Sep 11 16:59:14 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Fix SWIG version check to not fail on 3.* by making the
	  pattern match all older versions rather than some newer ones, and
	  update the minimum checked for to be what we actually currently want
	  - it was 1.3.40 which is 5 years old!

Wed Sep 03 19:15:34 GMT 2014  Olly Betts <olly@survex.com>

	* xapian-head.i,xapian-headers.i: Define XAPIAN_IN_XAPIAN_H rather
	  than XAPIAN_LIB_BUILD to avoid the direct subheader inclusion
	  checks.

Fri Aug 29 21:36:39 GMT 2014  Olly Betts <olly@survex.com>

	* xapian-headers.i: Add DBCHECK_SHOW_FREELIST as a constant to wrap.

Thu Aug 21 08:53:48 GMT 2014  Olly Betts <olly@survex.com>

	* xapian-headers.i: Add DB_FULL_SYNC as a constant to wrap.

Tue Aug 05 12:46:08 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS: Update.

Fri Aug 01 06:34:31 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Enable automake option 'subdir-objects' as (a) this
	  avoids a warning with newer automake and (b) it better to put the
	  objects alongside the source in this case anyway (less cluttered,
	  and the objects and generated sources will both get cleaned up
	  if the directory is removed).

Wed Jul 30 04:03:09 GMT 2014  Olly Betts <olly@survex.com>

	* perl/Makefile.am,php/Makefile.am: Restore explicit dependencies of
	  except.i - they are needed so that except.i gets generated before
	  the automatically generated dependency information is available.

Tue Jul 22 01:04:29 GMT 2014  Olly Betts <olly@survex.com>

	* php/Makefile.am: Add add-php-ref-handling script as a dependency of
	  the stamp file, so we regenerate if this script changes.

Tue Jul 22 01:02:48 GMT 2014  Olly Betts <olly@survex.com>

	* perl/Makefile.am,php/Makefile.am: Remove unnecessary explicit
	  dependencies on except.i, as swig-depcomp finds this automatically.

Tue Jul 22 01:02:04 GMT 2014  Olly Betts <olly@survex.com>
