@@ -1,3 +1,8 @@
+Thu Sep 11 17:02:10 GMT 2014  Olly Betts <olly@survex.com>
+
+	* php/smoketest.php: Add regression test for throwing an exception from
+	  a PHP implementation of FieldProcessor::apply(), fixed by newer SWIG.
+
 Thu Sep 11 16:59:14 GMT 2014  Olly Betts <olly@survex.com>
 
 	* configure.ac: Fix SWIG version check to not fail on 3.* by making the
